Fix logo out of place on small screens (#4026)

--- a/app/assets/stylesheets/theme/nav.scss
+++ b/app/assets/stylesheets/theme/nav.scss
@@ -6,7 +6,7 @@
   @media screen and (max-width: 460px) {
     .brave-logo {
       position: absolute;
-      top: 28px;
+      top: 0px;
     }
 
     .brave-logo img {
